ImplementInsertRoomRateFunction